# edf_catalogotablas

./: .blackboxrc  .cspell.json  .cursorrules  .dockerignore  .env.atlas.example  .env.example  .eslintignore  .flake8  .gitignore  .htmlhintrc  .markdownlint.json  .markdownlintignore  .prettierignore  .pylintrc  .spellright.json  .stylelintrc.json  .windsurf-settings.json  2025.service -n 20 --no-pager  ANALISIS_EXTENSIONES_SEGURO.md  CHANGELOG.md  CLAUDE.md  CORRECCION_BUILD_GITHUB_ACTIONS.md  DEPENDENCY_CLEANUP_REPORT.md  DEVELOPMENT_WORKFLOW.md  DIAGNOSTICO_GOOGLE_DRIVE.md  DOCKER.md  DOCKER_AUTH_FIX.md  DOCKER_BUILD.md  DOCKER_OFFLINE.md  DOSSIER_DEPENDENCIAS_ANALISIS.md  Dockerfile  Dockerfile.alpine  EDF_CatalogoDeTablas.spec  EDF_CatalogoDeTablas.spec.backup  EDF_CatalogoDeTablas_Native_WebSockets.spec  ESTADO_ACTUAL_IMAGENES.md  ESTRUCTURA_COMPLETA_PROYECTO.md  GEMINI_CLI_TUTORIAL.md  GUIA_INTERFAZ_WEB_GEMINI.md  GUIA_RECONOCIMIENTO_AUTOMATICO_SCRIPTS.md  (+319 more)
.github/: copilot-instructions.md
_archived_requirements/: requirements-python310-090925.txt
admin_utils/: cleanup_users.py
app/: README.md  __init__.py  admin_config.py  admin_routes.py  audit.py  auth2fa_routes.py  auth_utils.py  cache_system.py  clean_logging.py  config.py  config_embedded.py  crear_imagen_perfil_default.py  data_fallback.py  database.py  decorators.py  error_handlers.py  exceptions.py  extensions.py  factory.py  factory.py.backup_flask_login  filters.py  logging_config.py  logging_unified.py  maintenance.py  models.py  monitoring.py  notifications.py  security_middleware.py  uploads_routes.py  utils.py
app_data/: edefrutos2025_catalogs_fallback.json  edefrutos2025_metrics.json  edefrutos2025_notifications_config.example.json  edefrutos2025_notifications_config.json  edefrutos2025_notifications_config.json.RECOVERED  edefrutos2025_users_fallback.json
backup_empty_files/: advanced_monitor.py  check_test_user_ssl_fix.py  conftest.py  create_test_user.py
backups/: app.py.bak.1747160564.709979  app.py.bak.completo  app.py.bak.final  app.py.bak.funcionalidad  catalog_backup_20250527_132709.csv  catalog_backup_20250527_133526.csv  catalog_backup_20250527_133532.json  catalogs.csv  catalogs.json  config.py.bak.1747077842.377603  mover_backups.py  mover_todos_backups.py  users.json
config/: mongodb_config.json  monitoring_config.py  preferencias_comunicacion.md
dev_template/: pytest_report.html
docs/: AUDITORIA_RESUMEN_20250618.md  Análisis Sistema Catálogos Tablas.md  Archivo de rutas Python.md  CLEANUP_SUMMARY.md  CRON_SETUP.md  Checklist de Mantenimiento, Seguridad y Backups.md  Checklist de Mantenimiento, Seguridad.md  Comandos útiles para mantenimiento.md  Creacion_y_distribucion_profesional_app_macOS.md  INSTRUCCIONES_IA.md  README.md  README_cabeceras.md  README_headers_EN.md  auth_implementation.md  aws_instructions.md  cleanup_plan.md  configuracion_despliegue.md  local_development_setup.md  mongodb_solution_summary.md  mongodb_whitelist_instructions.md  resolucion_problemas_edefrutos2025.md  testing_ui.md
docs_md/: LANDING_DIVI5_BLOQUES_DIVI.md  LANDING_DIVI5_BLOQUES_DIVI_AB.md  LANDING_DIVI5_CENTRO_DE_MANDO.html  LANDING_DIVI5_CENTRO_DE_MANDO.md  LANDING_DIVI5_MATRIZ_DECISION.md  README.md  RECONSTRUCCION_COMPLETADA.md  🔒 COMPENDIO_GOOGLE_DRIVE_SOLUCIONADO.md  🔒 PYINSTALLER_TROUBLESHOOTING.md  🔒 RECONSTRUCCION_COMPLETADA.md
exportados/: usuarios_exportados_20250529_112246.txt  usuarios_exportados_20250529_112246.xlsx
hojas_de_calculo/: conectores.csv  conectores.xlsx  inventario valor.xlsx  tabla.csv  tabla.xls
logs/: gunicorn.pid  supervisor.pid
mcp-server-demo/: main.py  pyproject.toml
models/: auth_models.py
reports/: accessibility-audit.json
scripts/: 00_update_catalogs.py  02_verificar_duplicados.py  03_ver_guardado_rutas_en_MongoDB.py  07.-cambiar_definicion_de_coleccion_en_codigo.py  08.-verificar_coleccion_vacia.py  Comandos para configurar tu aplicación en el servidor.md  README.md  __init__.py  capturar-chat.sh  catalog_utils.py  check_admin_role.py  check_db.py  check_excel.py  check_users.py  clean_images.py  cleanup_duplicates.py  cleanup_users.py  debug_julia.py  debug_new_table.py  debug_passwords.py  migrate_maintenance_routes.py  migrate_users.py  normalize_users.py  verificar_connect.py
src/: logger.py
static/: admin.html  admin_login.html
temp_files_to_remove/: acceder.py  acceso_admin_fix.py  acceso_directo.py  acceso_directo_admin.py  acceso_directo_catalogs_session.py  acceso_directo_completo.py  acceso_directo_simple.py  acceso_directo_usuario.py  admin_direct.html  bypass_login.html  corregir_acceso_catalogs.py  corregir_apache.py  corregir_usuario_normal.py  fix_access.py  fix_auth_final.py  fix_cleanup_tables.py  html2pdf770086-0.html  panel_emergencia.php  solucion_usuarios_normales.py  solucionar_acceso.py  solucionar_acceso_completo.py  solucionar_catalogs_completo.py  verificar_acceso_catalogs.py  verificar_acceso_final.py  verificar_final_catalogs.py
templates/: acceso_directo.html  acceso_fix.html  admin_info.html  index.html  session_info.html
test_scripts/: debug_julia.py  final_cleanup.py
tests/: check_test_user.py  check_test_user_ssl_fix.py  conftest.py  create_test_user.py  requirements.txt  (+17 more)
(+1386 files in other folders)
