[build-system]
requires = [ "setuptools>=45", "wheel",]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = [ "py39",]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.pytest_cache\n  | \\.tox\n  | \\.venv\n  | venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pycodestyle]
max-line-length = 88
ignore = [ "E203", "W503", "F841",]

[tool.basedpyright]
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false
reportImplicitRelativeImport = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportUnboundVariable = false
reportMissingImports = false
venvPath = "."
venv = "venv310"
pythonPath = "./venv310/bin/python"
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportPartiallyUnknownParameterType = false
reportPartiallyUnknownMemberType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingParameterType = false
reportPossiblyUnboundVariable = false
reportUnusedParameter = false
reportUnusedVariable = false
reportUnusedImport = false
reportUnusedCallResult = false
reportUnannotatedClassAttribute = false
reportImplicitOverride = false
reportUnknownLambdaType = false
reportCallIssue = false
reportArgumentType = false
reportAny = false
reportUnnecessaryIsInstance = false
reportUnreachable = false
reportIndexIssue = false
reportOperatorIssue = false
reportImplicitStringConcatenation = false
reportDeprecated = false
reportPrivateUsage = false
reportUntypedNamedTuple = false
reportImportCycles = false
reportUntypedFunctionDecorator = false
reportExplicitAny = false
reportUnusedFunction = false

[tool.mypy]
ignore_missing_imports = true
disable_error_code = [ "attr-defined", "import-untyped",]

[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503", "E501",]
exclude = [ ".git", "__pycache__", "venv*", ".venv", "env", ".env", "build", "dist", "*.egg-info", "migrations", ".pytest_cache",]

[tool.pylint."messages control"]
disable = [ "no-member",]

[tool.ruff.lint]
ignore-init-module-imports = false
ignore = [ "F841", "F821", "F401", "E402", "E722", "F541", "F811",]
